# PRISM

./: CMakeLists.txt  LICENSE  README.md
examples/: CMakeLists.txt  prism.cpp
include/: compressor.hpp  prism.hpp
include/encoder/: RZE.hpp  d_repetition_elimination.hpp  d_zero_elimination.hpp  lossless.hpp  max_scan.hpp  prefix_sum.hpp  zbpc.hpp
include/loader/: dataloader.hpp
include/predictor/: InterpolationPredictor.hpp  bitplane.hpp
include/utils/: analyze.hpp  err.hpp  io.hpp  parameters.hpp  timer.hpp  traits.hpp
src/: compressor.cu  prism.cu
src/encoder/: zbpc.cu
src/loader/: dataloader.cu
src/predictor/: InterpolationPredictor.cu  bitplane.cu
src/utils/: io.cu  parameters.cu
